Refactor callout to AuthorizationService with enhancements
Renamed `Callout` to `AuthorizationService` for clarity and introduced new configuration options, including `AsyncWorkers` and `ServiceEndpoints`. Added benchmarking, updated documentation, improved handling.

--- a/taskfile.dist.yaml
+++ b/taskfile.dist.yaml
@@ -19,3 +19,8 @@ tasks:
   fmt:
     cmds:
       - gofumpt -l -w .
+
+  bench:
+    cmds:
+      - go test -run ^\$ -bench=Benchmark -cpu 16
+      
