--- a/taskfile.dist.yaml
+++ b/taskfile.dist.yaml
@@ -1,7 +1,7 @@
 # this needs `tasks` and `node` installed
 # brew install go-task - https://taskfile.dev
 # task setup
-version: '3'
+version: "3"
 
 tasks:
   cover:
@@ -25,4 +25,22 @@ tasks:
   bench:
     cmds:
       - go test -run ^\$ -bench=Benchmark -cpu 16
-      
+  bf:
+    cmds:
+      - go test -run ^\$ -bench={{.CLI_ARGS}} -cpu 16
+  bench_separate:
+    cmds:
+      - for: [ Benchmark_EncodeJwts, Benchmark_ParallelEncodeJwts, Benchmark_ParallelConnect, Benchmark_ServiceHandler, Benchmark_ParallelServiceHandler, Benchmark_MicroRequestReply, Benchmark_MicroAsyncRequestReply, Benchmark_RequestReply, Benchmark_ParallelRequestReply, Benchmark_Auth, Benchmark_AuthParallel, Benchmark_AuthMultipleServiceEndpoints, Benchmark_AuthAsyncWorkers, Benchmark_AuthMultipleServices]
+        vars:
+          TEST: '{{.ITEM}}'
+        task: bench_limits
+
+  bench_limits:
+    cmds:
+      - go test -run ^\$ -bench='{{.TEST}}' -cpu 16
+
+  ft:
+    cmds:
+      - go test -run ^\$ -testify.m={{.CLI_ARGS}}
+
+
