Refactor benchmarks for improved accuracy and metrics reporting
Replaced custom sampling logic with native `testing.B` metrics reporting to streamline and standardize performance evaluations. Updated connections and benchmark setup for more robust error tracking and resource cleanup. Upgraded `nst.go` dependency to v0.0.11 for compatibility improvements.

--- a/taskfile.dist.yaml
+++ b/taskfile.dist.yaml
@@ -43,4 +43,8 @@ tasks:
     cmds:
       - go test -run ^\$ -testify.m={{.CLI_ARGS}}
 
+  auth:
+    cmds:
+      - go test -run ^\$ -bench=Benchmark_Auth -cpu 16
+
 
